# simulador_ingles

./: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py  spa.py
backend/app/api/: admin_audit.py  admin_exam.py  admin_export.py  admin_users.py  auth.py  deps.py  exam.py  health.py
backend/app/core/: config.py  cookies.py  database.py  errors.py  logging.py  security.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/schemas/: auth.py  exam.py  user.py
backend/app/services/: audit_service.py  auth_service.py  exam_engine.py  exam_service.py  grading_service.py  normalization.py  user_service.py
backend/app/static/: index.html
backend/app/static/assets/: index-ChU5Ee7X.css  index-Do6Fq7Ll.js
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: create_admin.py  e2e_test.py  render_start.sh  seed_verbs.py
backend/seed/: verbs_data.py
backend/tests/: conftest.py  test_auth.py  test_exam_engine.py  test_grading.py  test_health.py  test_health_unit.py  test_normalization.py  test_security.py  test_seed_data.py  test_spa.py
docs/: api.md  deploy-render.md
docs/decisions/: 001-stack-and-styling.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/components/: AppShell.tsx  (+3 more)
frontend/tests/: HomePage.test.tsx  LoginPage.test.tsx
scripts/: embed_frontend.sh
(+17 files in other folders)
